--- a/package.json
+++ b/package.json
@@ -1,4 +1,11 @@
 {
+  "name": "assignment1-auth",
+  "version": "1.0.0",
+  "main": "index.js",
+  "scripts": {
+    "start": "node index.js"
+  },
+
   "dependencies": {
     "bcrypt": "^5.1.1",
     "connect-mongo": "^5.1.0",
